Fix redstone image padding overflow on phone

--- a/blog.css
+++ b/blog.css
@@ -37,7 +37,7 @@
 }
 
 img {
-    padding: 2rem;
+    padding: 2rem 0;
     max-width: 80vw;
 }
 
